# Getaway-BE

./: Dockerfile  docker-compose.yml  pom.xml
.github/workflows/: main_holidayplannermonolith.yml
Getaway/: docker-compose.yml
Getaway/src/main/resources/: application.properties
Scraper/: WebPageTool.py  extractor.py  main.py  pyproject.toml  schemas.py  scrape.py
src/main/java/com/example/holidayplanner/: GetawayApplication.java  HolidayPlannerApplication.java
src/main/java/com/example/holidayplanner/availableDates/: AvailableDates.java  AvailableDatesConfig.java  AvailableDatesController.java  AvailableDatesRepository.java  AvailableDatesService.java
src/main/java/com/example/holidayplanner/budget/: Budget.java  BudgetController.java  BudgetRepository.java
src/main/java/com/example/holidayplanner/config/: AppConfig.java  CacheConfig.java  MongoConfig.java  MyUserDetailsService.java  PasswordEncoderTest.java  SecurityConfigurer.java  SetupDataLoader.java  SwaggerConfig.java  WebConfig.java
src/main/java/com/example/holidayplanner/controllers/: AvailableDatesController.java  BudgetController.java  FeedbackController.java  GroupController.java  GroupInviteController.java  HolidayController.java  HolidayInviteController.java  HolidayPreferencesController.java  UserController.java
src/main/java/com/example/holidayplanner/crawler/: Crawler.java  Scraper.java
src/main/java/com/example/holidayplanner/feedback/: Feedback.java  (+3 more)
src/main/resources/: application.properties
src/test/java/com/example/holidayplanner/: GetawayApplicationTests.java
(+135 files in other folders)
