[tool.poetry]
name = "Scraper"
version = "0.1.0"
description = "Scrape accomodation sites for Getaway"
authors = ["Fifolu Akinyemi <fkinyemi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
