[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Scrape accomodation sites for Getaway"
authors = ["Fifolu Akinyemi <fkinyemi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
langchain = "^0.1.7"
openai = "^1.12.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
playwright = "^1.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
